--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,7 +31,7 @@
 	<h1>Blueprints </h1>
 	<label for="Author">Author:</label>
 	<input type="text" id="author" name="author"><br><br>
-	<button type="button" onclick="app.getBlueprints(author)">Get blueprints</button>
+	<button type="button" onclick="app.getBlueprints(author.value)">Get blueprints</button>
 	<table>
         <thead>
             <tr>
