--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,8 +31,8 @@
 	<h1>Blueprints </h1>
 	<label for="Author">Author:</label>
 	<input type="text" id="author" name="author"><br><br>
-	<button type="button" onclick="app.getBlueprints(author.value)">Get blueprints</button>
-	<table>
+	<button type="button" onclick= "app.get(author.value)" >Get blueprints</button>
+	<table id ="blups">
         <thead>
             <tr>
                 <th>Blueprint name</th>
