--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,4 +43,9 @@
     </table>
     <output id="points" type="text">Points:</output>
     <output id="total" type="text"></output>
+    <br/>
+    <input type="text" id="Name" name="name"><br><br>
+    <button type="button" onclick= "app.limpiar(),app.getp(Name.value,author.value)" >Get P</button>
+    <br/>
+    <canvas id="Canvas" width="480" height="380" style="border:1px solid #000F11;"></canvas>
 </head>
