correccion puntos totales

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,7 +42,7 @@
         </thead>
     </table>
     <output id="points" type="text">Points:</output>
-    <output id="total" type="text"></output>
+    <output id="total" type="text">0</output>
     <br/>
     <canvas id="Canvas" width="480" height="380" style="border:1px solid #000F11;"></canvas>
 </head>
