--- a/bin/main/static/index.html
+++ b/bin/main/static/index.html
@@ -22,11 +22,11 @@
                 text-align: left;
             }
             .columna1 {
-                width:45%;
+                width:48%;
                 float:left;
             }
             .columna2 {
-                width:45%;
+                width:48%;
                 float:right;
             }
             .content div {
@@ -55,6 +55,8 @@
             <br/>
         </div>
         <div class="columna1">
+            <output id="authorP" type="text" style="margin-top: 20px;"></output>
+            
             <table id ="blups">
                 <thead>
                     <tr>
@@ -70,7 +72,12 @@
         </div>
 
         <div class="columna2">
-            <canvas id="Canvas" width="480" height="380" style="border:1px solid #000F11;"></canvas>
+            <output id="current" type="text" ></output>
+            <body onLoad="app.init()">
+                <canvas id="Canvas" width="700" height="480" style="border:1px solid #000F11;margin-top: 20px;"  ></canvas>
+            </body>
         </div>
+        <button style="margin-top: 20px;" type="button" onclick= "" >Save/Update</button>
+        <button style="margin-top: 20px;" type="button" onclick= "" >Delete</button>
     </div>
 </head>
