--- a/bin/main/static/index.html
+++ b/bin/main/static/index.html
@@ -77,7 +77,7 @@
                 <canvas id="Canvas" width="700" height="480" style="border:1px solid #000F11;margin-top: 20px;"  ></canvas>
             </body>
         </div>
-        <button style="margin-top: 20px;" type="button" onclick= "" >Save/Update</button>
+        <button style="margin-top: 20px;" type="button" onclick= "app.addOrUpdate()" >Save/Update</button>
         <button style="margin-top: 20px;" type="button" onclick= "" >Delete</button>
     </div>
 </head>
