--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <div class="columna2">
-            <button style="margin-top: 20px;background-color:rgb(202, 68, 95)" type="button" onclick= "" >Create new blueprint</button>
+            <button style="margin-top: 20px;background-color:rgb(202, 68, 95)" type="button" onclick= "app.limpiar(), app.createBp()" >Create new blueprint</button>
             <output id="current" type="text" ></output>
             <body onLoad="app.init()">
                 <canvas id="Canvas" width="700" height="480" style="border:1px solid #000F11;margin-top: 20px;"  ></canvas>
