--- a/bin/main/static/index.html
+++ b/bin/main/static/index.html
@@ -78,7 +78,7 @@
                 <canvas id="Canvas" width="700" height="480" style="border:1px solid #000F11;margin-top: 20px;"  ></canvas>
             </body>
             <button style="margin-top: 20px;background-color:#429b19" type="button" onclick= "app.addOrUpdate()" >Save/Update</button>
-            <button style="margin-top: 20px;background-color:#d12798" type="button" onclick= "" >Delete</button>
+            <button style="margin-top: 20px;background-color:#d12798" type="button" onclick= "app.del()" >Delete</button>
         </div>
         
     </div>
